# anchor-action

./: Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml
.github/workflows/: test.yml
src/: github.rs  main.rs
src/analyzer/: accounts.rs  cpi.rs  mod.rs  pda.rs
tests/fixtures/programs/vulnerable/src/: lib.rs
